feat: style.css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
 
-    <script src="app.js" types="text/javascript"></script>
+<link rel="stylesheet" href="style.css">
+<title> Talk Banana </title>
 </head>
+
 <body>
-    <h1> Talk Banana </h1>
+    <header>
+        <h1> Talk Banana </h1>
+        <p class="github"> </p>
+    </header>
+    
+    <main>
+        <form id="form">
+            <textarea id="txt-input" placeholder="Type Here.." required></textarea>
+
+            <button type="submit">Translate</button>
+        </form>
+
+        <textarea id="output" placeholder="Output will be shown here.." readonly></textarea>
+    </main>
+
+    <footer>
+        About:
+        <br>
+        Convert from English to BANANA speak. This language is spoken bt the minions in DEspicble me.
+        The language is actually lots of languages. Yi kai yai yai bananna!  
+        Minions is a registered trademark of Universal Studios.
+        <br>
+        <br>
+        <p>
+            <a href="https://adityaashinde.github.io/portfolio/" target="_blank">Aditya Shinde</a>
+        </p>
+    </footer>
+
+    <script src="app.js" types="text/javascript"></script>
+
 </body>
 </html>
