feat: style.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <form id="form">
             <textarea id="txt-input" placeholder="Type Here.." required></textarea>
 
-            <button type="submit">Translate</button>
+            <button type="submit">Translate!</button>
         </form>
 
         <textarea id="output" placeholder="Output will be shown here.." readonly></textarea>
@@ -29,7 +29,7 @@
     <footer>
         About:
         <br>
-        Convert from English to BANANA speak. This language is spoken bt the minions in DEspicble me.
+        Convert from English to Banana speak. This language is spoken bt the minions in Despicble me.
         The language is actually lots of languages. Yi kai yai yai bananna!  
         Minions is a registered trademark of Universal Studios.
         <br>
