docs: added README

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1> Talk Banana </h1>
+        <h1> TALK BANANA</h1>
         <p class="github"> </p>
     </header>
     
