--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <p>
             <a href="https://adityaashinde.github.io/portfolio/" target="_blank">Aditya Shinde</a>
         </p>
-    </footer>
+    </foot>
 
-    <script src="app.js" types="text/javascript"></script>
+    <script src="app.js">
+    </script>
 
 </body>
 </html>
