--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
 
-<link rel="stylesheet" href="style.css">
-<title> Talk Banana </title>
+    <link rel="stylesheet" href="style.css">
+    <title> Talk Banana </title>
 </head>
 
 <body>
     <header>
         <h1> TALK BANANA </h1>
-        <p class="github"> </p>
+        <p class="github"><a href="https://github.com/adityaashinde/Banana-Speak" target="_blank"> GitHub </a> </p>
     </header>
-    
+
     <main>
         <form id="form">
             <textarea id="txt-input" placeholder="Type Here.." required></textarea>
@@ -30,17 +31,15 @@
         About:
         <br>
         Convert from English to Banana speak. This language is spoken bt the minions in Despicble me.
-        The language is actually lots of languages. Yi kai yai yai bananna!  
+        The language is actually lots of languages. Yi kai yai yai bananna!
         Minions is a registered trademark of Universal Studios.
-        <br>
-        <br>
-        <p>
-            <a href="https://adityaashinde.github.io/portfolio/" target="_blank">Aditya Shinde</a>
-        </p>
-    </foot>
+        <br> <br>
+        <p><a href="https://adityaashinde.github.io/portfolio/" target="_blank"> Aditya Shinde </a></p>
+        </foot>
 
-    <script src="app.js">
-    </script>
+        <script src="app.js">
+        </script>
 
 </body>
+
 </html>
