--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
         About:
         <br>
-        Convert from English to Banana speak. This language is spoken bt the minions in Despicble me.
+        Convert from English to Banana speak. This language is spoken by the minions in Despicble me.
         The language is actually lots of languages. Yi kai yai yai bananna!
         Minions is a registered trademark of Universal Studios.
         <br> <br>
